// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Read Only Model Plan Summary -- Model Basics > matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="read-only-model-plan--model-basics"
    data-testid="read-only-model-plan--model-basics"
  >
    <div>
      <div
        class="display-flex margin-bottom-2 "
      >
        <h2
          class="margin-y-0 margin-right-2"
        >
          Model basics
        </h2>
      </div>
      <div
        class="display-flex flex-align-center flex-wrap margin-right-1 margin-bottom-4"
      >
        <p
          class="margin-y-0 text-bold margin-right-1"
        >
          Status:
        </p>
        <div
          class="model-plan-task-list__task-tag line-height-body-1 text-bold mint-no-print bg-warning width-fit-content margin-right-1"
          data-testid="tasklist-tag"
        >
          <span>
            In progress
          </span>
        </div>
        <div
          class="display-flex flex-align-center flex-wrap margin-right-1"
        >
          <p
            class="margin-y-0 text-normal margin-right-1 text-base"
          >
            Model last updated 06/03/2022
          </p>
        </div>
      </div>
    </div>
    <div
      class="desktop:grid-col-12"
      data-testid="grid"
    >
      <div
        class="read-only-section read-only-section--previous-names margin-bottom-3"
      >
        <div
          class="read-only-section--question"
        >
          <span
            class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
          >
            Previous names
          </span>
        </div>
        <ul
          class="margin-y-0 padding-left-3"
        >
          <li
            class="font-sans-md line-height-sans-4"
          >
            First Name
          </li>
          <ul />
          <li
            class="font-sans-md line-height-sans-4"
          >
            Second Name
          </li>
          <ul />
        </ul>
      </div>
    </div>
    <div
      class="bg-base-lightest padding-2 margin-top-4 margin-bottom-4"
    >
      <p
        class="margin-top-0 text-bold"
      >
        Other identifiers
      </p>
      <p
        class="line-height-mono-4"
      >
        These are created in 
        <span
          class="mint-no-print"
        >
          <a
            aria-label="Open AMS in a new tab"
            class="usa-link usa-link--external"
            href="https://ams.cmmi.cms.gov"
            rel="noopener noreferrer"
            target="_blank"
          >
            CMMI Analysis & Management System (AMS).
          </a>
        </span>
        <span
          class="mint-only-print-inline"
        >
          CMMI Analysis & Management System (AMS).
        </span>
         Skip these fields until your model has been added to AMS. Not all models will have demo codes.
      </p>
      <div
        class="grid-row grid-gap"
        data-testid="grid"
      >
        <div
          class="grid-col-6"
          data-testid="grid"
        >
          <p
            class="text-bold margin-top-0 margin-bottom-1"
          >
            Model ID
          </p>
          43532323
        </div>
        <div
          class="grid-col-6"
          data-testid="grid"
        >
          <p
            class="text-bold margin-top-0 margin-bottom-1"
          >
            Demo code(s)
          </p>
          1234
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="grid-row grid-gap"
        data-testid="grid"
      >
        <div
          class="desktop:grid-col-6"
          data-testid="grid"
        >
          <div
            class="desktop:grid-col-12"
            data-testid="grid"
          >
            <div
              class="read-only-section read-only-section--primary-model-category margin-bottom-3"
            >
              <div
                class="read-only-section--question"
              >
                <span
                  class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
                >
                  Primary model category
                </span>
              </div>
              <div
                class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
              >
                State & Community-Based
                <span
                  class="top-2px position-relative"
                >
                  <span
                    class="usa-tooltip"
                    data-testid="tooltipWrapper"
                  >
                    <div
                      aria-describedby="tooltip-«r5»"
                      class="usa-tooltip__trigger mint-no-print margin-left-05"
                      data-testid="triggerElement"
                      tabindex="0"
                      title=""
                    >
                      <svg
                        aria-label="info"
                        class="usa-icon text-base-light"
                        focusable="false"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                    </div>
                    <span
                      aria-hidden="true"
                      class="usa-tooltip__body"
                      data-testid="tooltipBody"
                      id="tooltip-«r5»"
                      role="tooltip"
                      title="Models in which a state or community-based organization serves as the main contractual participant, including managed care organizations serving Medicaid beneficiaries."
                    >
                      Models in which a state or community-based organization serves as the main contractual participant, including managed care organizations serving Medicaid beneficiaries.
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="desktop:grid-col-6"
          data-testid="grid"
        >
          <div
            class="desktop:grid-col-12"
            data-testid="grid"
          >
            <div
              class="read-only-section read-only-section--additional-model-categories margin-bottom-3"
            >
              <div
                class="read-only-section--question"
              >
                <span
                  class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
                >
                  Additional model categories
                </span>
              </div>
              <ul
                class="margin-y-0 padding-left-3"
              >
                <li
                  class="font-sans-md line-height-sans-4"
                >
                  Accountable Care
                  <span
                    class="top-2px position-relative"
                  >
                    <span
                      class="usa-tooltip"
                      data-testid="tooltipWrapper"
                    >
                      <div
                        aria-describedby="tooltip-«r6»"
                        class="usa-tooltip__trigger mint-no-print margin-left-05"
                        data-testid="triggerElement"
                        tabindex="0"
                        title=""
                      >
                        <svg
                          aria-label="info"
                          class="usa-icon text-base-light"
                          focusable="false"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                          />
                        </svg>
                      </div>
                      <span
                        aria-hidden="true"
                        class="usa-tooltip__body"
                        data-testid="tooltipBody"
                        id="tooltip-«r6»"
                        role="tooltip"
                        title="Models in which a doctor, group of health care providers or hospital takes financial responsibility for improving quality of care, including advanced primary care services, care coordination and health outcomes for a defined group of patients, thereby reducing care fragmentation and unnecessary costs for patients and the health system"
                      >
                        Models in which a doctor, group of health care providers or hospital takes financial responsibility for improving quality of care, including advanced primary care services, care coordination and health outcomes for a defined group of patients, thereby reducing care fragmentation and unnecessary costs for patients and the health system
                      </span>
                    </span>
                  </span>
                </li>
                <ul />
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="grid-row grid-gap"
        data-testid="grid"
      >
        <div
          class="desktop:grid-col-6"
          data-testid="grid"
        >
          <div
            class="desktop:grid-col-12"
            data-testid="grid"
          >
            <div
              class="read-only-section read-only-section--cms-component margin-bottom-3"
            >
              <div
                class="read-only-section--question"
              >
                <span
                  class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
                >
                  CMS component
                </span>
              </div>
              <ul
                class="margin-y-0 padding-left-3"
              >
                <li
                  class="font-sans-md line-height-sans-4"
                >
                  Center for Medicaid and CHIP Services (CMCS)
                </li>
                <ul />
                <li
                  class="font-sans-md line-height-sans-4"
                >
                  Center for Medicare (CM)
                </li>
                <ul />
              </ul>
            </div>
          </div>
        </div>
        <div
          class="desktop:grid-col-6"
          data-testid="grid"
        >
          <div
            class="desktop:grid-col-12"
            data-testid="grid"
          >
            <div
              class="read-only-section read-only-section--cmmi-group margin-bottom-3"
            >
              <div
                class="read-only-section--question"
              >
                <span
                  class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
                >
                  CMMI Group
                </span>
              </div>
              <ul
                class="margin-y-0 padding-left-3"
              >
                <li
                  class="font-sans-md line-height-sans-4"
                >
                  Policy and Programs Group (PPG)
                </li>
                <ul />
                <li
                  class="font-sans-md line-height-sans-4"
                >
                  State and Population Health Group (SPHG)
                </li>
                <ul />
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--model-type margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
            >
              Model Type
            </span>
          </div>
          <ul
            class="margin-y-0 padding-left-3"
          >
            <li
              class="font-sans-md line-height-sans-4"
            >
              Mandatory national
            </li>
            <ul />
          </ul>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--problem-statement margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
            >
              Problem statement
            </span>
          </div>
          <div
            class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            There is not enough candy
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--goal margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
            >
              Goal
              <span
                class="text-normal line-height-sans-2 margin-left-1 position-relative"
              >
                <span
                  class="usa-tooltip top-2px"
                  data-testid="tooltipWrapper"
                >
                  <div
                    aria-describedby="tooltip-«r7»"
                    class="usa-tooltip__trigger mint-no-print"
                    data-testid="triggerElement"
                    tabindex="0"
                    title=""
                  >
                    <svg
                      aria-label="info"
                      class="usa-icon text-base-light"
                      focusable="false"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                      />
                    </svg>
                  </div>
                  <span
                    aria-hidden="true"
                    class="usa-tooltip__body"
                    data-testid="tooltipBody"
                    id="tooltip-«r7»"
                    role="tooltip"
                    title="The high level goal of the program and a description of the project."
                  >
                    The high level goal of the program and a description of the project.
                  </span>
                </span>
              </span>
            </span>
          </div>
          <div
            class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            To get more candy
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--test-interventions margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
            >
              Test Interventions
            </span>
          </div>
          <div
            class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            The great candy machine
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--notes margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
            >
              Notes
            </span>
          </div>
          <div
            class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            The machine doesn't work yet
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--complete-icip margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
            >
              Complete ICIP
            </span>
          </div>
          <div
            class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            <em
              class="text-base mint-text-medium"
            >
              No answer entered
            </em>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--clearance-start-date margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
            >
              Clearance start date
            </span>
          </div>
          <div
            class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            <em
              class="text-base mint-text-medium"
            >
              No answer entered
            </em>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--clearance-end-date margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
            >
              Clearance end date
            </span>
          </div>
          <div
            class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            <em
              class="text-base mint-text-medium"
            >
              No answer entered
            </em>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--announce-model margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
            >
              Announce model
            </span>
          </div>
          <div
            class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            <em
              class="text-base mint-text-medium"
            >
              No answer entered
            </em>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    >
      <div
        class="grid-row grid-gap"
        data-testid="grid"
      >
        <div
          class="desktop:grid-col-6"
          data-testid="grid"
        >
          <div
            class="desktop:grid-col-12"
            data-testid="grid"
          >
            <div
              class="read-only-section read-only-section--application-start-date margin-bottom-3"
            >
              <div
                class="read-only-section--question"
              >
                <span
                  class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
                >
                  Application start date
                </span>
              </div>
              <div
                class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
              >
                <em
                  class="text-base mint-text-medium"
                >
                  No answer entered
                </em>
              </div>
            </div>
          </div>
        </div>
        <div
          class="desktop:grid-col-6"
          data-testid="grid"
        >
          <div
            class="desktop:grid-col-12"
            data-testid="grid"
          >
            <div
              class="read-only-section read-only-section--application-end-date margin-bottom-3"
            >
              <div
                class="read-only-section--question"
              >
                <span
                  class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
                >
                  Application end date
                </span>
              </div>
              <div
                class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
              >
                <em
                  class="text-base mint-text-medium"
                >
                  No answer entered
                </em>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="text-bold font-body-sm line-height-sans-4 margin-bottom-2"
      >
        Performance period
        <span
          class="top-2px position-relative text-normal"
        >
          <span
            class="usa-tooltip"
            data-testid="tooltipWrapper"
          >
            <div
              aria-describedby="tooltip-«r8»"
              class="usa-tooltip__trigger mint-no-print margin-left-05"
              data-testid="triggerElement"
              tabindex="0"
              title=""
            >
              <svg
                aria-label="info"
                class="usa-icon text-base-light"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                />
              </svg>
            </div>
            <span
              aria-hidden="true"
              class="usa-tooltip__body"
              data-testid="tooltipBody"
              id="tooltip-«r8»"
              role="tooltip"
              title="When the model will be active beginning with the go-live date"
            >
              When the model will be active beginning with the go-live date
            </span>
          </span>
        </span>
      </div>
      <div
        class="grid-row grid-gap"
        data-testid="grid"
      >
        <div
          class="desktop:grid-col-6"
          data-testid="grid"
        >
          <div
            class="desktop:grid-col-12"
            data-testid="grid"
          >
            <div
              class="read-only-section read-only-section--performance-start-date margin-bottom-3"
            >
              <div
                class="read-only-section--question"
              >
                <span
                  class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
                >
                  Performance start date
                </span>
              </div>
              <div
                class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
              >
                <em
                  class="text-base mint-text-medium"
                >
                  No answer entered
                </em>
              </div>
            </div>
          </div>
        </div>
        <div
          class="desktop:grid-col-6"
          data-testid="grid"
        >
          <div
            class="desktop:grid-col-12"
            data-testid="grid"
          >
            <div
              class="read-only-section read-only-section--performance-end-date margin-bottom-3"
            >
              <div
                class="read-only-section--question"
              >
                <span
                  class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
                >
                  Performance end date
                </span>
              </div>
              <div
                class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
              >
                <em
                  class="text-base mint-text-medium"
                >
                  No answer entered
                </em>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
    />
    <div
      class=""
    />
    <div
      class=""
    >
      <div
        class="desktop:grid-col-12"
        data-testid="grid"
      >
        <div
          class="read-only-section read-only-section--model-wrap-up-end-date margin-bottom-3"
        >
          <div
            class="read-only-section--question"
          >
            <span
              class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
            >
              Model wrap-up end date
            </span>
          </div>
          <div
            class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
          >
            <em
              class="text-base mint-text-medium"
            >
              No answer entered
            </em>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mint-section read-only-model-plan__timeline--wrapper border-base-light padding-top-4  border-y-1px padding-bottom-2 margin-bottom-4 margin-top-6"
      data-testid="section-wrapper"
    >
      <h3
        class="margin-y-0"
      >
        highLevelTimeline
      </h3>
    </div>
    <div
      class="desktop:grid-col-12"
      data-testid="grid"
    >
      <div
        class="read-only-section read-only-section--if-timelines-are-tight--might-there-be-pieces-of-the-model-that-can-be-phased-in-over-time margin-bottom-3"
      >
        <div
          class="read-only-section--question"
        >
          <span
            class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
          >
            If timelines are tight, might there be pieces of the model that can be phased in over time?
            <span
              class="text-normal line-height-sans-2 margin-left-1 position-relative"
            >
              <span
                class="usa-tooltip top-2px"
                data-testid="tooltipWrapper"
              >
                <div
                  aria-describedby="tooltip-«r9»"
                  class="usa-tooltip__trigger mint-no-print"
                  data-testid="triggerElement"
                  tabindex="0"
                  title=""
                >
                  <svg
                    aria-label="info"
                    class="usa-icon text-base-light"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                    />
                  </svg>
                </div>
                <span
                  aria-hidden="true"
                  class="usa-tooltip__body"
                  data-testid="tooltipBody"
                  id="tooltip-«r9»"
                  role="tooltip"
                  title="That is, the basic model would start at the earliest possible date, but additional facets could be phased in at a later quarter."
                >
                  That is, the basic model would start at the earliest possible date, but additional facets could be phased in at a later quarter.
                </span>
              </span>
            </span>
          </span>
        </div>
        <div
          class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
        >
          No
        </div>
      </div>
    </div>
    <div
      class="desktop:grid-col-12"
      data-testid="grid"
    >
      <div
        class="read-only-section read-only-section--notes margin-bottom-3"
      >
        <div
          class="read-only-section--question"
        >
          <span
            class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
          >
            Notes
          </span>
        </div>
        <div
          class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
        >
          This can't be phased in
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Read Only Model Plan Summary -- Model timeline > matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="read-only-model-plan--model-timeline"
    data-testid="read-only-model-plan--model-timeline"
  >
    <div>
      <div
        class="display-flex margin-bottom-2 "
      >
        <h2
          class="margin-y-0 margin-right-2"
        >
          Model timeline
        </h2>
      </div>
      <div
        class="display-flex flex-align-center flex-wrap margin-right-1 margin-bottom-4"
      >
        <p
          class="margin-y-0 text-bold margin-right-1"
        >
          Status:
        </p>
        <div
          class="model-plan-task-list__task-tag line-height-body-1 text-bold mint-no-print bg-warning width-fit-content margin-right-1"
          data-testid="tasklist-tag"
        >
          <span>
            In progress
          </span>
        </div>
        <div
          class="display-flex flex-align-center flex-wrap margin-right-1"
        >
          <p
            class="margin-y-0 text-normal margin-right-1 text-base-dark"
          >
            Last updated 06/03/2022
          </p>
          <div
            class="border-left-2px border-base-light margin-left-105 padding-left-2 height-2 margin-top-1px"
          />
          <svg
            class="usa-icon margin-right-1 text-primary"
            data-testid="edit-icon"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 0 0 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
          <a
            class="usa-link"
            href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/model-timeline"
          >
            Edit dates
          </a>
        </div>
      </div>
    </div>
    <ol
      class="usa-process-list read-only-model-plan__timeline"
    >
      <li
        class="usa-process-list__item read-only-model-plan__timeline__list-item"
      >
        <p
          class="usa-process-list__heading mint-text-normal line-height-sans-4"
          data-testid="processListHeading"
        >
          Complete ICIP
        </p>
        <p
          class="margin-y-0 font-body-md line-height-sans-4"
        >
          06/03/2022
        </p>
      </li>
      <li
        class="usa-process-list__item read-only-model-plan__timeline__list-item"
      >
        <div
          class="display-flex flex-align-top"
        >
          <p
            class="usa-process-list__heading mint-text-normal line-height-sans-4"
            data-testid="processListHeading"
          >
            Clearance
          </p>
          <span
            class="margin-top-0 position-relative text-normal"
          >
            <span
              class="usa-tooltip"
              data-testid="tooltipWrapper"
            >
              <div
                aria-describedby="tooltip-«r2»"
                class="usa-tooltip__trigger mint-no-print margin-left-05"
                data-testid="triggerElement"
                tabindex="0"
                title=""
              >
                <svg
                  aria-label="info"
                  class="usa-icon text-base-light"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                  />
                </svg>
              </div>
              <span
                aria-hidden="true"
                class="usa-tooltip__body"
                data-testid="tooltipBody"
                id="tooltip-«r2»"
                role="tooltip"
                title="When the model anticipates beginning internal (CMMI) clearance through completion of OMB clearance"
              >
                When the model anticipates beginning internal (CMMI) clearance through completion of OMB clearance
              </span>
            </span>
          </span>
        </div>
        <div
          class="mobile-lg:display-flex"
        >
          <div
            class="width-card-lg margin-bottom-2 mobile-lg:margin-bottom-0"
          >
            <p
              class="usa-process-list__heading mint-text-normal line-height-sans-4"
              data-testid="processListHeading"
            >
              Clearance start date
            </p>
            <p
              class="margin-y-0 font-body-md line-height-sans-4"
            >
              06/03/2022
            </p>
          </div>
          <div
            class="width-card-lg margin-bottom-2 mobile-lg:margin-bottom-0"
          >
            <p
              class="usa-process-list__heading mint-text-normal line-height-sans-4"
              data-testid="processListHeading"
            >
              Clearance end date
            </p>
            <p
              class="margin-y-0 font-body-md line-height-sans-4"
            >
              06/03/2022
            </p>
          </div>
        </div>
      </li>
      <li
        class="usa-process-list__item read-only-model-plan__timeline__list-item"
      >
        <p
          class="usa-process-list__heading mint-text-normal line-height-sans-4"
          data-testid="processListHeading"
        >
          Announce model
        </p>
        <p
          class="margin-y-0 font-body-md line-height-sans-4"
        >
          06/03/2022
        </p>
      </li>
      <li
        class="usa-process-list__item read-only-model-plan__timeline__list-item"
      >
        <p
          class="usa-process-list__heading mint-text-normal line-height-sans-4"
          data-testid="processListHeading"
        >
          Application period
        </p>
        <div
          class="mobile-lg:display-flex"
        >
          <div
            class="width-card-lg margin-bottom-2 mobile-lg:margin-bottom-0"
          >
            <p
              class="usa-process-list__heading mint-text-normal line-height-sans-4"
              data-testid="processListHeading"
            >
              Application start date
            </p>
            <p
              class="margin-y-0 font-body-md line-height-sans-4"
            >
              06/03/2022
            </p>
          </div>
          <div
            class="width-card-lg margin-bottom-2 mobile-lg:margin-bottom-0"
          >
            <p
              class="usa-process-list__heading mint-text-normal line-height-sans-4"
              data-testid="processListHeading"
            >
              Application end date
            </p>
            <p
              class="margin-y-0 font-body-md line-height-sans-4"
            >
              06/03/2022
            </p>
          </div>
        </div>
      </li>
      <li
        class="usa-process-list__item read-only-model-plan__timeline__list-item"
      >
        <div
          class="display-flex flex-align-top"
        >
          <p
            class="usa-process-list__heading mint-text-normal line-height-sans-4"
            data-testid="processListHeading"
          >
            Performance period
          </p>
          <span
            class="margin-top-0 position-relative text-normal"
          >
            <span
              class="usa-tooltip"
              data-testid="tooltipWrapper"
            >
              <div
                aria-describedby="tooltip-«r3»"
                class="usa-tooltip__trigger mint-no-print margin-left-05"
                data-testid="triggerElement"
                tabindex="0"
                title=""
              >
                <svg
                  aria-label="info"
                  class="usa-icon text-base-light"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                  />
                </svg>
              </div>
              <span
                aria-hidden="true"
                class="usa-tooltip__body"
                data-testid="tooltipBody"
                id="tooltip-«r3»"
                role="tooltip"
                title="When the model will be active beginning with the go-live date"
              >
                When the model will be active beginning with the go-live date
              </span>
            </span>
          </span>
        </div>
        <div
          class="mobile-lg:display-flex"
        >
          <div
            class="width-card-lg margin-bottom-2 mobile-lg:margin-bottom-0"
          >
            <p
              class="usa-process-list__heading mint-text-normal line-height-sans-4"
              data-testid="processListHeading"
            >
              Performance start date
            </p>
            <p
              class="margin-y-0 font-body-md line-height-sans-4"
            >
              06/03/2022
            </p>
          </div>
          <div
            class="width-card-lg margin-bottom-2 mobile-lg:margin-bottom-0"
          >
            <p
              class="usa-process-list__heading mint-text-normal line-height-sans-4"
              data-testid="processListHeading"
            >
              Performance end date
            </p>
            <p
              class="margin-y-0 font-body-md line-height-sans-4"
            >
              06/03/2022
            </p>
          </div>
        </div>
      </li>
      <li
        class="usa-process-list__item read-only-model-plan__timeline__list-item"
      >
        <p
          class="usa-process-list__heading mint-text-normal line-height-sans-4"
          data-testid="processListHeading"
        >
          Model wrap-up end date
        </p>
        <p
          class="margin-y-0 font-body-md line-height-sans-4"
        >
          06/03/2022
        </p>
      </li>
    </ol>
    <div
      class="desktop:grid-col-12"
      data-testid="grid"
    >
      <div
        class="read-only-section read-only-section--notes margin-bottom-3"
      >
        <div
          class="read-only-section--question"
        >
          <span
            class="text-bold margin-y-0 mint-text-normal line-height-sans-4 text-pre-line"
          >
            Notes
          </span>
        </div>
        <div
          class="margin-y-0 mint-text-medium line-height-sans-4 text-pre-line text-overflow-wrap-break-word"
        >
          Theses are my best guess notes
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
